# raydad_interview_project

./: Dockerfile  README.md  pyproject.toml
divar/: settings.py  urls.py
divar_api/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
divar_api/migrations/: 0001_initial.py
